--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currency Converter</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <h2>Currency Converter</h2>
@@ -18,9 +20,21 @@
                 <div class="from">
                     <p>From</p>
                     <div class="select-container">
+                        <!-- <img src="https://flagsapi.com/:country_code/:style/:size.png" alt=""> -->
+                        <img src="https://flagsapi.com/US/flat/64.png" alt="">
                         <select name="from" id="">
-                            <option value="USD">USD</option>
+                            <option value="USD" selected>USD</option>
                             <option value="INR">INR</option>
+                            <option value="EUR">EUR</option>
+                            <option value="AUD">AUD</option>
+                        </select>
+                    </div>
+                    <p>To</p>
+                    <div class="select-container">
+                        <img src="https://flagsapi.com/IN/flat/64.png" alt="">
+                        <select name="to" id="">
+                            <option value="USD">USD</option>
+                            <option value="INR" selected>INR</option>
                             <option value="EUR">EUR</option>
                             <option value="AUD">AUD</option>
                         </select>
@@ -32,4 +46,5 @@
 
     <script src="logic.js"></script>
 </body>
+
 </html>
