--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currency Converter</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div class="container">
         <h2>Currency Converter</h2>
@@ -20,21 +18,22 @@
                 <div class="from">
                     <p>From</p>
                     <div class="select-container">
-                        <!-- <img src="https://flagsapi.com/:country_code/:style/:size.png" alt=""> -->
                         <img src="https://flagsapi.com/US/flat/64.png" alt="">
                         <select name="from" id="">
-                            <option value="USD" selected>USD</option>
+                            <option value="USD selected">USD</option>
                             <option value="INR">INR</option>
                             <option value="EUR">EUR</option>
                             <option value="AUD">AUD</option>
                         </select>
                     </div>
+                </div>
+                <div class="to">
                     <p>To</p>
                     <div class="select-container">
                         <img src="https://flagsapi.com/IN/flat/64.png" alt="">
                         <select name="to" id="">
                             <option value="USD">USD</option>
-                            <option value="INR" selected>INR</option>
+                            <option value="INR selected">INR</option>
                             <option value="EUR">EUR</option>
                             <option value="AUD">AUD</option>
                         </select>
@@ -46,5 +45,4 @@
 
     <script src="logic.js"></script>
 </body>
-
 </html>
